Add support for conda environment

--- a/nextflow.config
+++ b/nextflow.config
@@ -24,16 +24,5 @@ report {
     file = "${params.result_dir}/workflow-report.html"
 }
 
-profiles {
-    conda {
-        conda.enabled = true
-        process {
-            conda = 'samtools'
-        }
-    }
-
-    docker {
-        docker.enabled = true
-        process.container = 'nextflow/examples:latest'
-    }
-}
+conda.enabled = true
+process.conda = "${projectDir}/amplimap_env.yaml"
